--- a/modules/ansible/roles/consul/templates/verify-server-node.sh.j2
+++ b/modules/ansible/roles/consul/templates/verify-server-node.sh.j2
@@ -8,19 +8,19 @@ while true; do
     sleep 5
 done
 
-until [[ $TOTAL_NEW -ge ${total_nodes} ]]; do
+until [[ $TOTAL_NEW -ge {{ consul_server_total_node }} ]]; do
     TOTAL_NEW=$(curl -s http://127.0.0.1:8500/v1/catalog/service/consul | jq -er 'map(select(.NodeMeta.cluster_version == "{{ consul_cluster_version }}")) | length')
     sleep 5
     echo "Current New Node Count: $TOTAL_NEW"
 done
 
 # Wait for a leader
-until [[ $LEADER -eq 1 ]]; do
+until [[ $LEADER -eq {{ consul_server_cluster_size }} ]]; do
     let LEADER=0
     echo "Fetching new node ID's"
     NEW_NODE_IDS=$(curl -s http://127.0.0.1:8500/v1/catalog/service/consul | jq -r 'map(select(.NodeMeta.cluster_version == "{{ consul_cluster_version }}")) | .[].ID')
     # Wait until all new nodes are voting
-    until [[ $VOTERS -eq ${bootstrap_expect} ]]; do
+    until [[ $VOTERS -eq {{ consul_server_cluster_size }} ]]; do
         let VOTERS=0
         for ID in $NEW_NODE_IDS; do
             echo "Checking $ID"
